letter spacing correction

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
 
 h1,h3 {
   font-family: var(--font-title);
+  letter-spacing: 0.1em;
 }
 
 a {
